  * Fourier interpolation of phonon potential implemented in ph.x
    (Jae-Mo Lihm, Seoul Natl. Univ.)
  * Extension of the PW code to DFT+U+V [JPCM 22, 055602 (2010)];
    Extension of the HP code to compute also inter-site Hubbard V parameters;
    Extension of the XSpectra code to work on top of DFT+U+V [arXiv:2004.04142]
    (I. Timrov, N. Marzari, M. Cococcioni).
  * Support for BEEF-vdW XC (by Johannes Voss) compilation link has been included; 
    e.g. BEEF_LIBS="-L$LIBBEEF/src -lbeef", where $LIBBEEF is the path 
    to the compiled libbeef folder. If "calculation='ensemble'", 
    BEEF-vdW nscf ensemble energies will be generated at the end of PWscf.
    (Gabriel S. Gusmão, Georgia Tech)
  * i-PI socket now supports on-the-fly change of flags for SCF, forces,
    stresses and variable cell calculations using binary-integer enconding.
    (Gabriel S. Gusmão, Georgia Tech)
  * Phonon-induced electron self-energy implemented in ph.x and
    a new post-processing program PHonon/postahc.x added.
    (Jae-Mo Lihm, Seoul Natl. Univ.)
  
Fixed in dev branch:
  * PW: Restart from interrupted calculations  simplified. As a side effect,
    NEB restart now works again
  * A few LIBXC glitches
  * Fermi energy incorrectly written to xml file in 'bands' calculation
    (did not affect results, just Fermi energy position in band plotting)
    Also: Fermi energy always written to xml file, also for insulators
  * Phonon code in the noncolinear case with magnetization ("domag" case)
    now works properly - courtesy Andrea Urru and Andrea Dal Corso.
  * Incorrect forces, and slightly inconsistent atomic positions, were
    written to xml file for structural optimization and molecular dynamics
  * Some Bravais lattices with special axis orientations were not correctly
    written to xml file, leading to errors in some codes (e.g., thermo_pw)
    using that piece of information (fixed by Alberto Otero de la Roza)